# atlas

./: .env.example  .gitignore  Cargo.toml  LICENSE-MIT  README.md  compose.yaml  docker-compose.yml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/workflows/: ci.yml
atlas-cli/: Cargo.toml
atlas-cli/src/: cli.rs  commands.rs  fs.rs  main.rs
atlas-cli/src/cli/: normalize.rs  quantify.rs  transform.rs
atlas-cli/src/cli/transform/: vst.rs
atlas-cli/src/commands/: normalize.rs  quantify.rs  transform.rs
atlas-cli/src/commands/quantify/: count.rs  filter.rs  match_intervals.rs  segmented_reads.rs  specification.rs
atlas-cli/src/commands/transform/: tsne.rs  vst.rs
atlas-core/: Cargo.toml
atlas-core/src/: counts.rs  features.rs  lib.rs  strand_specification.rs
atlas-core/src/collections/: interval_tree.rs
atlas-core/src/counts/: dimension_reduction.rs  normalization.rs  reader.rs  transforms.rs
atlas-core/src/counts/dimension_reduction/: tsne.rs
atlas-core/src/counts/normalization/: fpkm.rs  median_of_ratios.rs  tmm.rs  tpm.rs
atlas-core/src/counts/reader/: format.rs  htseq_count.rs  star.rs
atlas-core/src/counts/transforms/: vst.rs
atlas-core/src/features/: feature.rs
atlas-server/: Cargo.toml
atlas-server/migrations/: 20220218210416_create_schema.sql
atlas-server/src/: cli.rs  counts.rs  features.rs  lib.rs  main.rs  queue.rs  server.rs  store.rs
atlas-server/src/cli/: dataset.rs  server.rs  worker.rs
atlas-server/src/commands/: configuration.rs  server.rs  worker.rs
atlas-server/src/commands/configuration/: import.rs
atlas-server/src/commands/dataset/: create.rs
atlas-server/src/commands/run/: import.rs
atlas-server/src/counts/: format.rs
atlas-server/src/features/: feature.rs
atlas-server/src/queue/task/: plot.rs
atlas-server/src/queue/task/plot/: error.rs  options.rs
atlas-server/src/server/: configurations.rs  counts.rs  datasets.rs  error.rs  runs.rs  samples.rs
atlas-server/src/server/analyses/: plot.rs
atlas-server/src/server/analyses/plot/: create.rs
atlas-server/src/server/configurations/: features.rs
atlas-server/src/server/datasets/: runs.rs
atlas-server/src/server/features/: runs.rs
atlas-server/src/server/fixtures/: samples.sql
atlas-server/src/server/runs/: counts.rs
atlas-server/src/server/runs/fixtures/: counts.sql
atlas-server/src/server/samples/: runs.rs
atlas-server/src/store/: configuration.rs  count.rs  dataset.rs  feature.rs  run.rs  strand_specification.rs
atlas-server/src/store/fixtures/: configuration_all.sql  dataset_exists.sql  sample_find.sql
migrations/: 20220218210416_create_samples.sql  20220218210416_create_schema.sql  20220218210505_create_counts.sql  20220228170105_create_annotations.sql  20220228170315_create_counts.sql  20220228172952_create_configurations.sql  20220228173713_create_feature_names.sql  20220228173713_create_features.sql  20220228174018_create_counts.sql  20220228174018_create_runs.sql  20220228190849_create_counts.sql  20230713191332_create_tasks.sql  20230825192302_create_results.sql
specification/: Makefile  main.tex
src/: cli.rs  commands.rs  counts.rs  features.rs  lib.rs  main.rs  queue.rs  server.rs  store.rs
src/cli/: configuration.rs  dataset.rs  run.rs
src/commands/: dataset.rs  import.rs  run.rs  worker.rs
src/commands/configuration/: import.rs
src/commands/dataset/: add.rs  create.rs
src/commands/run/: import.rs
src/counts/: format.rs  normalization.rs  reader.rs
src/counts/normalization/: fpkm.rs  median_of_ratios.rs  tpm.rs
src/counts/reader/: htseq_count.rs  star.rs
src/features/: feature.rs
src/queue/: task.rs
src/queue/task/: plot.rs
src/queue/task/plot/: error.rs
src/server/: analyses.rs  configurations.rs  counts.rs  datasets.rs  error.rs  runs.rs  samples.rs  types.rs
src/server/analyses/: plot.rs
src/server/analyses/plot/: create.rs
src/server/configurations/: features.rs
src/server/configurations/features/: runs.rs
src/server/configurations/fixtures/: features.sql
src/server/datasets/: runs.rs
src/server/features/: runs.rs
src/server/fixtures/: configurations.sql  counts.sql  samples.sql
src/server/runs/: counts.rs
src/server/runs/fixtures/: counts.sql
src/server/samples/: runs.rs
src/sql/: test_seeds.sql
src/store/: annotations.rs  configuration.rs  count.rs  dataset.rs  feature.rs  feature_name.rs  run.rs  sample.rs  strand_specification.rs
src/store/fixtures/: configuration_exists.sql  count_create_counts.sql  sample_find.sql
static/: docs.html
tests/fixtures/: counts.tsv
tests/sql/: seeds.sql
