[package]
name = "atlas"
version = "0.1.0"
authors = ["Michael Macias <michael.macias@stjude.org>"]
edition = "2021"
rust-version = "1.70.0"
description = "Enables storing, querying, transforming, and visualizing of multidimensional count data"
homepage = "https://github.com/stjude-rust-labs/atlas"
repository = "https://github.com/stjude-rust-labs/atlas"

[dependencies]
anyhow = "1.0.55"
axum = "0.6.1"
bhtsne = { version = "0.5.2", default-features = false }
clap = { version = "4.0.27", features = ["derive", "env"] }
dotenvy = "0.15.0"
futures = { version = "0.3.21", default-features = false, features = ["std"] }
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.7.0", features = ["json", "runtime-tokio", "postgres", "time", "tls-native-tls", "uuid"] }
thiserror = "1.0.40"
time = { version = "0.3.10", features = ["formatting", "parsing"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "time"] }
tower = "0.4.12"
tower-http = { version = "0.4.0", features = ["add-extension", "trace", "util"] }
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
utoipa = "3.3.0"
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }

[dev-dependencies]
hyper = "0.14.17"
serde_json = "1.0.79"
