[package]
name = "atlas-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
atlas-core = { path = "../atlas-core", version = "0.1.0" }
axum = "0.7.1"
bhtsne = { version = "0.5.2", default-features = false }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = "0.15.0"
futures = { version = "0.3.21", default-features = false, features = ["std"] }
ndarray = "0.16.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.8.0", features = ["json", "runtime-tokio", "postgres", "time", "tls-native-tls", "uuid"] }
thiserror.workspace = true
time = { version = "0.3.10", features = ["serde-human-readable"] }
tokio = { version = "1.17.0", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["add-extension", "fs", "trace", "util"] }
tracing.workspace = true
tracing-subscriber = "0.3.8"
utoipa = { version = "4.1.0", features = ["time", "uuid"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1.0"
hyper = "1.0.1"
